--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,30 @@
+body{
+    height: 100vh;
+    width: 100vh;
+    align-content: center;
+}
 header {
 background: url(apple-pie.jpg) no-repeat;
-background-size: cover; 
+background-size: cover;
 height: 100vh;
-text-align: center;
+width: 100vh;
+display: table;
+margin: 0px;
 }
 h1  {
     color: rgb(240, 228, 228);
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 64px;
     }
 .titulo {
-    align-self: center;
+    display: table-cell;
+    vertical-align: middle;    
 }
+section {
+    margin: 60pt;
+    border: color(black) 2px solid;
+}
+.prueba {
+    margin: 60pt;
+    border: color(black) 2px solid;
+    }
