--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,57 @@
-body{
-    height: 100vh;
-    width: 100vh;
-    align-content: center;
-}
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Raleway', sans-serif;
+    }
 header {
-background: url(apple-pie.jpg) no-repeat;
-background-size: cover;
-height: 100vh;
-width: 100vh;
-display: table;
-margin: 0px;
-}
-h1  {
-    color: rgb(240, 228, 228);
-    font-family: Arial, Helvetica, sans-serif;
+    background-image: url('../images/apple-pie.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 500px;
+    }
+
+h1 {
     font-size: 64px;
+    color: #fff;
     }
-.titulo {
-    display: table-cell;
-    vertical-align: middle;    
+
+h2 {
+    font-weight: bold;
 }
+
+#titulo {
+    height: 100%;
+    position: relative;
+}
+header h1 {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+p {
+    font-size: 18px;
+      }
+
 section {
-    margin: 60pt;
-    border: color(black) 2px solid;
+    font-size: 14px;
+    padding: 20px 0;
+    margin: 0% 5%;
+    border-bottom: 2px solid #d3d3d3;
+    margin-left: 10%;
+    margin-right: 10%;
+    }    
+.littleinfo {
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
-.prueba {
-    margin: 60pt;
-    border: color(black) 2px solid;
-    }
+#final {
+    border-bottom: none;
+    list-style-type: symbols(cyclic "\1F347");
+    
+
+}
